--- a/admin-server/application-dev.yml
+++ b/admin-server/application-dev.yml
@@ -2,8 +2,8 @@ server:
   port: 8888
 ---
 info:
-  scm-url: "https://github.com/shenxinli/spring-cloud-stage"
-  build-url: "http://www.chinawaytek.com"
+  scm-url: "@scm.url@"
+  build-url: "https://github.com/shenxinli/spring-cloud-stage"
 
 logging:
   file: "target/admin-server.log"
