--- a/admin-client/bootstrap.yml
+++ b/admin-client/bootstrap.yml
@@ -4,14 +4,18 @@ security:
     password: "123456"
 spring:
   application:
-    name: eureka-server
+    name: admin-server
   cloud:
     eureka:
       server:
         host:
-          name: localhost
+          name: 192.168.1.66
           port: 8761
     admin:
       host:
-        name: localhost
+        name: 192.168.1.66
         port: 8888
+    config:
+      host:
+        name: 192.168.1.66
+        port: 8787
