--- a/eureka-server/bootstrap.yml
+++ b/eureka-server/bootstrap.yml
@@ -4,14 +4,14 @@ security:
     password: "123456"
 spring:
   application:
-    name: admin-server
+    name: eureka-server
   cloud:
     eureka:
       server:
         host:
-          name: localhost
+          name: 192.168.1.66
           port: 8761
     admin:
       host:
-        name: localhost
+        name: 192.168.1.66
         port: 8888
