--- a/service-hi/application.yml
+++ b/service-hi/application.yml
@@ -1,3 +1,4 @@
+EUREKA_SERVICE_URL: http://172.18.170.87:8761
 info:
   scm-url: "@scm.url@"
   build-url: "https://github.com/shenxinli/spring-cloud-stage"
