--- a/global-config/application.yml
+++ b/global-config/application.yml
@@ -1,5 +1,6 @@
-EUREKA_SERVICE_URL: http://172.18.170.101:8761
-security:
-  user:
-    name: "root"
-    password: "chinaway2014"
+spring:
+  rabbitmq:
+    host: 120.79.93.249
+    port: 5673
+    username: shenxinli
+    password: chinaway2014
