--- a/service-hi/application.yml
+++ b/service-hi/application.yml
@@ -1,3 +1,3 @@
 info:
-  scm-url: "http://www.sina.com.cn"
+  scm-url: "http://www.google.com"
   build-url: "https://github.com/shenxinli/spring-cloud-stage"
