--- a/global-config/application.yml
+++ b/global-config/application.yml
@@ -1,3 +1,6 @@
+info:
+  scm-url: "http://120.79.93.249:8089/job/${spring.application.name}/"
+  build-url: "https://github.com/shenxinli/spring-cloud-stage"
 ---
 spring:
   rabbitmq:
