--- a/eureka-server/application.yml
+++ b/eureka-server/application.yml
@@ -1,3 +1,3 @@
 info:
-  scm-url: "@scm.url@"
-  build-url: "https://github.com/shenxinli/spring-cloud-stage?test=1"
+  scm-url: "http://120.79.93.249:8089/job/${spring.application.name}/"
+  build-url: "https://github.com/shenxinli/spring-cloud-stage"
