--- a/admin-server/application.yml
+++ b/admin-server/application.yml
@@ -1,3 +1,3 @@
 info:
   scm-url: "@scm.url@"
-  build-url: "https://github.com/shenxinli/spring-cloud-stage?test=1"
+  build-url: "https://github.com/shenxinli/spring-cloud-stage"
