--- a/global-config/application.yml
+++ b/global-config/application.yml
@@ -2,4 +2,4 @@ EUREKA_SERVICE_URL: http://172.18.170.101:8761
 security:
   user:
     name: "root"
-    password: "chinaway2014"
+    password: "supperstart"
