--- a/service-hi/application.yml
+++ b/service-hi/application.yml
@@ -1,3 +1,3 @@
 info:
-  scm-url: "http://www.google.com"
-  build-url: "https://github.com/shenxinli/spring-cloud-stage"
+  scm-url: "https://github.com/shenxinli/spring-cloud-stage"
+  build-url: "http://120.79.93.249:8089/job/${spring.application.name}/"
