--- a/service-hi/application-release.yml
+++ b/service-hi/application-release.yml
@@ -1,3 +1,3 @@
 info:
-  scm-url: "https://github.com/shenxinli/spring-cloud-stage?test=true"
+  scm-url: "https://github.com/shenxinli/spring-cloud-stage"
   build-url: "http://localhost:8088/"
