--- a/bin/global-config/application-release.yml
+++ b/bin/global-config/application-release.yml
@@ -4,7 +4,7 @@ security:
     name: "root"
     password: "superstar"
 info:
-  scm-url: "https://github.com/shenxinli/spring-cloud-stage?test=true"
+  scm-url: "https://github.com/shenxinli/spring-cloud-stage"
   build-url: "http://120.79.93.249:8089/job/${spring.application.name}/"
 ---
 spring:
