--- a/global-config/application-release.yml
+++ b/global-config/application-release.yml
@@ -5,7 +5,7 @@ security:
     password: "superstar"
 info:
   scm-url: "https://github.com/shenxinli/spring-cloud-stage"
-  build-url: "http://120.79.93.249:8089/job/${spring.application.name}/?_t"
+  build-url: "http://120.79.93.249:8089/job/${spring.application.name}/"
 ---
 spring:
   rabbitmq:
